# allpy

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
ai/: __init__.py  chat.py  client.py  config.py  echo.py  embedding.py  exceptions.py  image.py  moderation.py  registry.py  speech.py  stream.py  transform.py  vision.py
ai/providers/: __init__.py  deepseek.py  gemini.py  groq.py  huggingface.py  mistral.py  ollama.py  openai.py  openrouter.py  together.py
audio/: __init__.py  _compat.py  convert.py  edit.py  effects.py  info.py  merge.py  split.py  trim.py  utils.py  volume.py
core/: __init__.py  config.py  errors.py  logger.py  plugin.py  validators.py
data/: __init__.py  csv.py  excel.py  info.py  json_file.py  xml.py  yaml_file.py
file/: __init__.py  info.py  ops.py
image/: __init__.py  blur.py  compress.py  convert.py  crop.py  flip.py  resize.py  rotate.py  thumbnail.py  utils.py
pdf/: __init__.py  images.py  info.py  insert.py  merge.py  rotate.py  security.py  split.py  watermark.py
tests/: test_data.py  test_image.py  test_pdf.py  test_text.py  test_web.py
